kubernetes/deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app: django
    app.kubernetes.io/name: django
    app.kubernetes.io/instance: django-deploy
    app.kubernetes.io/version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
        app.kubernetes.io/name: django
        app.kubernetes.io/instance: django-deploy
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - name: django
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "curl -X PUT --data-binary @/docker-entrypoint.d/unit_config.json --unix-socket /var/run/control.unit.sock http://localhost/config"]
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/instance: django-service
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: server
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: django
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30111
