kubernetes/service_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/instance: django-service
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: server
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: django
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30111
